AuthController, Auth Service